attempt to fix oversized image on iphone x

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -51,6 +51,7 @@
             width: 50%;
             float: left;
             color: white;
+            padding-right: 1rem;
         }
     }
     .title {
