--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -45,8 +45,8 @@
                 align-self: center;
             }
             .name {
-                width: 40%;
-                height: 40%;
+                width: 3rem;
+                height: 3rem;
             }
             height: 100%;
             width: 100%;
